# CI-CD-pipeline-Demo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.basic  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  scan-results.txt
.github/workflows/: ci.yml  deploy.yml  docker.yml
config/: app.json
scripts/: deploy.sh
src/cicd_pipeline_demo/: __init__.py  app.py
tests/: test_app.py
